# ibus-egoisticlily

./: README.md  configure.ac
config/: Makefile.am
config/egoisticlily/: default.xml
config/gschema/: Makefile.am  org.freedesktop.ibus.engine.egoisticlily.gschema.xml
config/ibusengines/: Makefile.am  egoisticlily.xml.in
src/: egoisticlilyadaptor.py  egoisticlilyprefs.py  engine.py.in  factory.py.in  ibus-engine-egoisticlily.in  jastring.py  kana.py  main.py.in  prefs.py  romaji.py  segment.py  tables.py  thumb.py
